# ENSC351

./: LICENSE  README.md  as2.tgz
Smart Doorbell/: CMakeLists.txt
Smart Doorbell/hal/include/hal/: accelerometer.h  joystick.h  led.h  spi_adc.h  uart.h
Smart Doorbell/hal/src/: accelerometer.c  joystick.c  led.c  spi_adc.c  uart.c
Smart Doorbell/security-system/: package-lock.json  server.js
SmartDoorbell/app/: CMakeLists.txt
SmartDoorbell/app/include/: camera.h  sound.h  udp_client.h
SmartDoorbell/app/src/: camera.c  smart_doorbell.c  sound.c  udp_client.c
SmartDoorbell/hal/src/: joystick.c
SmartDoorbell/how-to-guide/Sample Code/: rfid_uart.c
SmartDoorbell/security-system/: package.json  server.js
SmartDoorbell/smart_doorbell_esp/: platformio.ini
SmartDoorbell/smart_doorbell_esp/include/: CameraModule.h  NetworkModule.h  WebStreamModule.h
SmartDoorbell/smart_doorbell_esp/src/: main.cpp
SmartDoorbell/smart_doorbell_flipper/: application.fam
as1-reaction-timer/: CMakeLists.txt  as1-capture
as1-reaction-timer/hal/include/hal/: joystick.h  led.h
as1-reaction-timer/hal/src/: joystick.c  led.c
as2-linux-light-dip-sensor/: CMakeLists.txt
as3-beatbox/: CMakeLists.txt
